Set up inputs for game
Set up inputs for game

--- a/Twin_Stick_Shooter/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Twin_Stick_Shooter/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -61,7 +61,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=120.000
@@ -119,12 +119,25 @@ AnimSequence.ImportSettings=True
 AnimSequence.Transform=True
 AnimSequence.MetaData=True
 AnimSequence.Thumbnail=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LodSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.AdditionalBodyPart=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.Transform=True
+SkeletalMesh.Thumbnail=True
+SkeletalMesh.TextureStreaming=True
 
 [AssetEditorToolkitTabLocation]
-/Game/AnimationAssets/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=1
-/Game/AnimationAssets/UE4_Mannequin/Mesh/SK_Mannequin.SK_Mannequin=1
+/Game/AnimationAssets/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=0
+/Game/AnimationAssets/UE4_Mannequin/Mesh/SK_Mannequin.SK_Mannequin=0
 /Game/AnimationAssets/Idle_Rifle_Hip.Idle_Rifle_Hip=1
-/Game/AnimationAssets/Jog_Bwd_Rifle.Jog_Bwd_Rifle=1
+/Game/AnimationAssets/Jog_Bwd_Rifle.Jog_Bwd_Rifle=0
+/Game/FPWeapon/Mesh/SK_FPGun_Skeleton.SK_FPGun_Skeleton=0
+/Game/FPWeapon/Mesh/SK_FPGun.SK_FPGun=0
 
 [Directories2]
 UNR=../../../../../../Unreal Engine Projects/Twin-Stick-Shooter/Twin_Stick_Shooter/Content/
