--- a/TestProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TestProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -58,7 +58,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,ShadowsFromEditorHiddenActors=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,SkinCache=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,VertexDensities=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshTexCoordSizeAccuracy=0,MaterialTexCoordScalesAccuracy=0,MaterialTexCoordScalesAnalysis=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,ShadowsFromEditorHiddenActors=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,SkinCache=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=0,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,VertexDensities=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshTexCoordSizeAccuracy=0,MaterialTexCoordScalesAccuracy=0,MaterialTexCoordScalesAnalysis=0",BufferVisualizationMode=,ExposureSettings=(LogOffset=0,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowStats=False,EnabledStats=,bShowFullToolbar=True))
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -73,16 +73,19 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/MyContent
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1290.000 Y=730.000
+ScreenPosition=X=320.000 Y=120.000
+WindowSize=X=1300.000 Y=740.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -99,7 +102,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Unreal Engine Projects/UE4-PlayGround/TestProject/Content/
+UNR=../../../../../../Unreal Engine Projects/UE4-PlayGround/TestProject/Content/MyContent
 BRUSH=../../../../../../Unreal Engine Projects/UE4-PlayGround/TestProject/Content/
 FBX=../../../../../../Unreal Engine Projects/UE4-PlayGround/TestProject/Content/
 FBXAnim=../../../../../../Unreal Engine Projects/UE4-PlayGround/TestProject/Content/
@@ -109,7 +112,7 @@ GenericOpen=../../../../../../Unreal Engine Projects/UE4-PlayGround/TestProject/
 GenericSave=../../../../../../Unreal Engine Projects/UE4-PlayGround/TestProject/Content/
 MeshImportExport=../../../../../../Unreal Engine Projects/UE4-PlayGround/TestProject/Content/
 WorldRoot=../../../../../../Unreal Engine Projects/UE4-PlayGround/TestProject/Content/
-Level=../../../../../../Unreal Engine Projects/UE4-PlayGround/TestProject/Content/
+Level=../../../../../../Unreal Engine Projects/UE4-PlayGround/TestProject/Content/MyContent
 Project=E:/Programs/Epic Games/4.12/
 
 [ModuleFileTracking]
@@ -539,5 +542,109 @@ CrashTracker.TimeStamp=2016.06.16-19.34.47
 CrashTracker.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2016.06.16-19.34.43
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2016.06.16-19.34.41
+NewLevelDialog.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2016.06.16-19.34.35
+StaticMeshEditor.LastCompileMethod=Unknown
+
+[MRU]
+MRUItem0=/Game/MyContent/MyLevel
+
+[DetailCategories]
+ThirdPersonCharacter_C.TransformCommon=True
+ThirdPersonCharacter_C.Animation=True
+ThirdPersonCharacter_C.Mesh=True
+ThirdPersonCharacter_C.Clothing=True
+ThirdPersonCharacter_C.Physics=True
+ThirdPersonCharacter_C.Collision=True
+ThirdPersonCharacter_C.Lighting=True
+ThirdPersonCharacter_C.Rendering=True
+ThirdPersonCharacter_C.Tags=True
+ThirdPersonCharacter_C.Activation=True
+ThirdPersonCharacter_C.Character Movement (General Settings)=True
+ThirdPersonCharacter_C.Character Movement: Walking=True
+ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+ThirdPersonCharacter_C.Character Movement: Swimming=True
+ThirdPersonCharacter_C.Character Movement: Flying=True
+ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+ThirdPersonCharacter_C.Character Movement (Networking)=True
+ThirdPersonCharacter_C.Character Movement=True
+ThirdPersonCharacter_C.Character Movement: Avoidance=True
+ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+ThirdPersonCharacter_C.NavMovement=True
+ThirdPersonCharacter_C.Velocity=True
+ThirdPersonCharacter_C.PlanarMovement=True
+ThirdPersonCharacter_C.MovementComponent=True
+ThirdPersonCharacter_C.Shape=True
+ThirdPersonCharacter_C.Navigation=True
+ThirdPersonCharacter_C.Character=True
+ThirdPersonCharacter_C.Camera=True
+ThirdPersonCharacter_C.Pawn=True
+ThirdPersonCharacter_C.Input=True
+ThirdPersonCharacter_C.Actor=True
+ThirdPersonCharacter_C.Materials=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Actor=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Rendering=True
+TextRenderActor.Lighting=True
+TextRenderActor.Tags=True
+TextRenderActor.Input=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Lighting=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Rendering=True
+DirectionalLight.Tags=True
+DirectionalLight.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.ImportSettings=True
+StaticMesh.Transform=True
+StaticMesh.Thumbnail=True
+StaticMesh.Collision=True
+StaticMesh.Navigation=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Actor=True
+
+[AssetEditorToolkitTabLocation]
+/Game/StarterContent/Architecture/Wall_Door_400x300.Wall_Door_400x300=1
+
+[PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Window_400x300.Wall_Window_400x300;/Engine/Transient.ActorFactoryStaticMesh_0
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x300.Wall_Door_400x300;/Engine/Transient.ActorFactoryStaticMesh_0
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x300.Wall_400x300;
 
 
